@@ -44,6 +44,7 @@ typedef enum {
 	RSVG_DEF_FILTER,
 	RSVG_DEF_MASK,
 	RSVG_DEF_MARKER,
+	RSVG_DEF_SYMBOL,
 	RSVG_DEF_CLIP_PATH
 } RsvgDefType;
 
